--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
   height: 60px;
   border: 1px solid black;
   background-color: rgb(255, 245, 100);
-  font-size: 1.5rem;
+  font-size: 2rem;
+  color: black;
   font-weight: bold;
   display: flex;
   align-items: center;
